# project_no2

./: .gitignore  README.md
backend/: Procfile  manage.py  pyproject.toml  requirements.txt
backend/apps/contents_analysis/: T_Ver3_naver_review_analysis_altimate.csv  Ver3_naver_review_analysis_altimate.csv  apps.py  models.py  serializer.py  urls.py  views.py
backend/apps/contents_analysis/migrations/: 0001_initial.py
backend/apps/small_theater/: apps.py  models.py  serializer.py  urls.py  views.py
backend/apps/small_theater/migrations/: 0001_initial.py
backend/apps/user/: admin.py  models.py  serializer.py  urls.py  views.py
backend/apps/user/migrations/: 0001_initial.py  0002_alter_user_prefer_ott_content_genre.py  0002_auto_20220105_1534.py  0003_alter_user_nickname.py  0003_auto_20211230_1817.py  0003_auto_20220105_1821.py  0003_user_is_staff.py  0004_auto_20220103_1551.py  0004_auto_20220105_0335.py  0004_auto_20220105_2326.py  0005_auto_20220106_0009.py  0006_remove_preferottcontentgenre_user.py  0007_rename_document_preferottcontentgenre_documentary.py  (+2 more)
backend/config/: settings.py  settings_1.py  urls.py
backend/contents_analysis/: apps.py  views.py
backend/small_theater/: models.py  serializers.py  urls.py  views.py
backend/small_theater/migrations/: 0001_initial.py  0002_auto_20220104_0121.py  0003_auto_20220104_0125.py
backend/small_theater/templates/: index.html
backend/user/: admin.py  models.py  models_1.py  serializer.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_auto_20211230_0756.py
backend_1/: manage.py
(+65 files in other folders)
